--- a/practice activities/intro to jupyter notebooks/Day01_Intro_to_Jupyter_Notebooks.ipynb
+++ b/practice activities/intro to jupyter notebooks/Day01_Intro_to_Jupyter_Notebooks.ipynb
@@ -7,7 +7,7 @@
         "id": "7c0dd8d6"
       },
       "source": [
-        "<h1> Introduction to Jupyter Notebooks </h1>"
+        "<h1> Introduction hi to Jupyter Notebooks </h1>"
       ]
     },
     {
