--- a/practice activities/02_decode_message/PA_errors_python.ipynb
+++ b/practice activities/02_decode_message/PA_errors_python.ipynb
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 76,
+      "execution_count": 189,
       "metadata": {
         "id": "D5pSzgxjrrqq",
         "vscode": {
@@ -58,18 +58,18 @@
       },
       "outputs": [
         {
-          "ename": "TypeError",
-          "evalue": "object of type 'function' has no len()",
+          "ename": "NameError",
+          "evalue": "name 'my_thing' is not defined",
           "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)\n",
-            "Cell \u001b[0;32mIn[76], line 3\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
+            "Cell \u001b[0;32mIn[189], line 2\u001b[0m\n",
             "\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#what do i do with this\u001b[39;00m\n",
-            "\u001b[1;32m      2\u001b[0m \u001b[38;5;28mtype\u001b[39m(my_thing)\n",
-            "\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mlen\u001b[39m(my_thing)\n",
+            "\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mtype\u001b[39m(my_thing)\n",
+            "\u001b[1;32m      3\u001b[0m \u001b[38;5;28mlen\u001b[39m(my_thing)\n",
             "\n",
-            "\u001b[0;31mTypeError\u001b[0m: object of type 'function' has no len()"
+            "\u001b[0;31mNameError\u001b[0m: name 'my_thing' is not defined"
           ]
         }
       ],
@@ -132,7 +132,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 77,
+      "execution_count": 190,
       "metadata": {
         "id": "l8ZVLLXWrrqs",
         "vscode": {
@@ -170,7 +170,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 78,
+      "execution_count": 191,
       "metadata": {
         "id": "x9YyIMP6rrqt",
         "vscode": {
@@ -206,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 192,
       "metadata": {
         "id": "K103ZvNVrrqu",
         "vscode": {
@@ -237,7 +237,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 92,
+      "execution_count": 193,
       "metadata": {
         "id": "iP7Zj5hPrrqu",
         "vscode": {
@@ -298,7 +298,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 194,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -313,7 +313,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 195,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -328,7 +328,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 196,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -339,12 +339,12 @@
         "#3\n",
         "import numpy as np\n",
         "#exponentiates every number using numpy\n",
-        "top_scret_3 = np.exp(top_secret_2)"
+        "top_secret_3 = np.exp(top_secret_2)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 197,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -355,12 +355,29 @@
         "#4\n",
         "import numpy as np\n",
         "#squares every number using numpy\n",
-        "top_secret_3 = np.square(top_secret_2)"
+        "top_secret_4 = np.square(top_secret_3)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 198,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "#checkpoint\n",
+        "#make sure that there are 352 values below 17\n",
+        "count_vals = top_secret_4[(top_secret_4 < 17)]\n",
+        "\n",
+        "#we get 352 vals so it's"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 199,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -375,49 +392,113 @@
         "#figured 191 by doing length(top_secret) / 5\n",
         "#first argument is #col\n",
         "#second argument is #row\n",
-        "top_secret_4 = top_secret_3.reshape(5, 191)\n"
+        "top_secret_5 = top_secret_4.reshape(5, 191)\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 120,
+      "execution_count": 200,
       "metadata": {
         "vscode": {
           "languageId": "python"
         }
       },
-      "outputs": [
-        {
-          "ename": "ValueError",
-          "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)\n",
-            "Cell \u001b[0;32mIn[120], line 7\u001b[0m\n",
-            "\u001b[1;32m      4\u001b[0m evens \u001b[38;5;241m=\u001b[39m []\n",
-            "\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m num \u001b[38;5;129;01min\u001b[39;00m top_secret_4:\n",
-            "\u001b[0;32m----> 7\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m num \u001b[38;5;241m%\u001b[39m \u001b[38;5;241m2\u001b[39m \u001b[38;5;241m==\u001b[39m\u001b[38;5;241m0\u001b[39m:\n",
-            "\u001b[1;32m      8\u001b[0m         out\u001b[38;5;241m.\u001b[39mappend(num)\n",
-            "\n",
-            "\u001b[0;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "#6\n",
         "#create array of all even numbers 1-382\n",
         "\n",
-        "evens = []\n",
+        "all_nums = np.arange(0, 382)\n",
         "\n",
-        "for num in top_secret_4:\n",
-        "    if num % 2 ==0:\n",
-        "        out.append(num)"
+        "#filters array so just even vals\n",
+        "even_vals = all_nums[(all_nums % 2 == 0)]"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 201,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "#7\n",
+        "#subtract even array from first column of matrix\n",
+        "\n",
+        "#check length of top secret column and even_vals\n",
+        "len(top_secret_5[0])\n",
+        "len(even_vals)\n",
+        "\n",
+        "#store top_secret_7 so that nothing changes if we run this multiple times it doesn't keep chaning the vals\n",
+        "top_secret_7 = top_secret_5\n",
+        "\n",
+        "#b/c they are the same length\n",
+        "#we can subtract top_secret by even_vals\\\n",
+        "top_secret_7[0] = top_secret_5[0] - even_vals\n",
+        "\n",
+        "#why does this keep changing top_secret_7 if i keep running it?\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 202,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "#8\n",
+        "#subtract 100 from rows 18-24 in the 3rd column\n",
+        "\n",
+        "#store top_secret_8 so that nothing changes if we run this multiple times it doesn't keep chaning the vals\n",
+        "top_secret_8 = top_secret_7\n",
+        "\n",
+        "top_secret_8[18:24, 3] = top_secret_7[18:24, 3] - 100\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 203,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "#9\n",
+        "#multiply all rows in the 4th and 5th column by 2\n",
+        "\n",
+        "#store top_secret_9 so that nothing changes if we run this multiple times it doesn't keep chaning the vals\n",
+        "top_secret_9 = top_secret_8\n",
+        "\n",
+        "top_secret_9[:, 4:5] = top_secret_8[:, 4:5] * 2"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 204,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "#10\n",
+        "#turn matrix back into 1D array\n",
+        "\n",
+        "#1 column and 5*191 = 955 rows\n",
+        "top_secret_10 = top_secret_9.reshape(1, 955)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 205,
       "metadata": {
         "id": "v_bB8VNvrrqu",
         "vscode": {
@@ -427,12 +508,12 @@
       "outputs": [
         {
           "ename": "KeyError",
-          "evalue": "\"None of [Index([ 0.39104270677516, 0.386445083484116,  0.37131377305518, 0.338811793814894,\\n        0.37131377305518, 0.396957206698566, 0.354794131173328, 0.375732236794894,\\n       0.369328801833454, 0.374048219522214,\\n       ...\\n       0.372714630100372, 0.333747306126176, 0.343093757143428, 0.360289290710268,\\n       0.312576749124872, 0.338811793814894, 0.258523689428891, 0.277777777777779,\\n       0.303230298107614, 0.368809575916449],\\n      dtype='float64', length=955)] are in the [index]\"",
+          "evalue": "\"None of [Index([ 0.39104270677516, 0.386445083484116,  0.37131377305518,\\n       0.338811793814894,  0.37131377305518, 0.396957206698566,\\n       0.354794131173328, 0.375732236794894, 0.369328801833454,\\n       0.374048219522214,\\n       ...\\n       0.372714630100372, 0.333747306126176, 0.343093757143428,\\n       0.360289290710268, 0.312576749124872, 0.338811793814894,\\n       0.258523689428891, 0.277777777777779, 0.303230298107614,\\n       0.368809575916449],\\n      dtype='float64', length=955)] are in the [index]\"",
           "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
             "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)\n",
-            "Cell \u001b[0;32mIn[89], line 1\u001b[0m\n",
+            "Cell \u001b[0;32mIn[205], line 1\u001b[0m\n",
             "\u001b[0;32m----> 1\u001b[0m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mstr\u001b[39m, symbols_df\u001b[38;5;241m.\u001b[39mloc[top_secret][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSymbol\u001b[39m\u001b[38;5;124m'\u001b[39m]))\n",
             "\n",
             "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/indexing.py:1191\u001b[0m, in \u001b[0;36m_LocationIndexer.__getitem__\u001b[0;34m(self, key)\u001b[0m\n",
@@ -476,7 +557,7 @@
             "\u001b[1;32m   6251\u001b[0m     not_found \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[38;5;241m.\u001b[39mnonzero()[\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;241m.\u001b[39munique())\n",
             "\u001b[1;32m   6252\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_found\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not in index\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
             "\n",
-            "\u001b[0;31mKeyError\u001b[0m: \"None of [Index([ 0.39104270677516, 0.386445083484116,  0.37131377305518, 0.338811793814894,\\n        0.37131377305518, 0.396957206698566, 0.354794131173328, 0.375732236794894,\\n       0.369328801833454, 0.374048219522214,\\n       ...\\n       0.372714630100372, 0.333747306126176, 0.343093757143428, 0.360289290710268,\\n       0.312576749124872, 0.338811793814894, 0.258523689428891, 0.277777777777779,\\n       0.303230298107614, 0.368809575916449],\\n      dtype='float64', length=955)] are in the [index]\""
+            "\u001b[0;31mKeyError\u001b[0m: \"None of [Index([ 0.39104270677516, 0.386445083484116,  0.37131377305518,\\n       0.338811793814894,  0.37131377305518, 0.396957206698566,\\n       0.354794131173328, 0.375732236794894, 0.369328801833454,\\n       0.374048219522214,\\n       ...\\n       0.372714630100372, 0.333747306126176, 0.343093757143428,\\n       0.360289290710268, 0.312576749124872, 0.338811793814894,\\n       0.258523689428891, 0.277777777777779, 0.303230298107614,\\n       0.368809575916449],\\n      dtype='float64', length=955)] are in the [index]\""
           ]
         }
       ],
