few changes done in class regarding format

--- a/practice activities/02_decode_message/PA_errors_python.ipynb
+++ b/practice activities/02_decode_message/PA_errors_python.ipynb
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 189,
+      "execution_count": 5,
       "metadata": {
         "id": "D5pSzgxjrrqq",
         "vscode": {
@@ -58,24 +58,24 @@
       },
       "outputs": [
         {
-          "ename": "NameError",
-          "evalue": "name 'my_thing' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
-            "Cell \u001b[0;32mIn[189], line 2\u001b[0m\n",
-            "\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#what do i do with this\u001b[39;00m\n",
-            "\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mtype\u001b[39m(my_thing)\n",
-            "\u001b[1;32m      3\u001b[0m \u001b[38;5;28mlen\u001b[39m(my_thing)\n",
-            "\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'my_thing' is not defined"
-          ]
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "execution_count": null,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
         "#what do i do with this\n",
+        "my_thing = \"good\"\n",
+        "\n",
+        "#says what type my_thing is\n",
         "type(my_thing)\n",
+        "\n",
+        "#length of my_thing only good for characters\n",
         "len(my_thing)\n",
         "\n",
         "\n"
