--- a/practice activities/02_decode_message/PA_errors_python.ipynb
+++ b/practice activities/02_decode_message/PA_errors_python.ipynb
@@ -13,6 +13,21 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "#imports libraries\n",
+        "import numpy as np\n",
+        "import pandas as pd"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "0mbR_4URrrqo"
@@ -179,8 +194,6 @@
       },
       "outputs": [],
       "source": [
-        "import numpy as np\n",
-        "\n",
         "#solution: added np. to each of the lines\n",
         "lower_case = np.array([\"a\", \"b\", \"c\", \"d\", \"e\", \"f\", \"g\", \"h\", \"i\", \"j\", \"k\", \"l\", \"m\", \"n\", \"o\", \"p\", \"q\", \"r\", \"s\", \"t\", \"u\", \"v\", \"w\", \"x\", \"y\", \"z\"])\n",
         "\n",
@@ -215,8 +228,6 @@
       },
       "outputs": [],
       "source": [
-        "import pandas as pd\n",
-        "\n",
         "symbols_df = pd.DataFrame(all_symbols, columns = [\"Symbol\"])\n",
         "\n",
         "#or\n",
@@ -337,7 +348,7 @@
       "outputs": [],
       "source": [
         "#3\n",
-        "import numpy as np\n",
+        "\n",
         "#exponentiates every number using numpy\n",
         "top_secret_3 = np.exp(top_secret_2)"
       ]
@@ -353,7 +364,7 @@
       "outputs": [],
       "source": [
         "#4\n",
-        "import numpy as np\n",
+        "\n",
         "#squares every number using numpy\n",
         "top_secret_4 = np.square(top_secret_3)"
       ]
@@ -386,7 +397,7 @@
       "outputs": [],
       "source": [
         "#5\n",
-        "import numpy as np\n",
+        "\n",
         "#turns this 1D array into a 2D array with 5 columns\n",
         "\n",
         "#figured 191 by doing length(top_secret) / 5\n",
@@ -562,7 +573,7 @@
         }
       ],
       "source": [
-        "''.join(map(str, symbols_df.loc[top_secret]['Symbol']))"
+        "#''.join(map(str, symbols_df.loc[top_secret]['Symbol']))"
       ]
     }
   ],
