--- a/practice activities/02_decode_message/PA_errors_python.ipynb
+++ b/practice activities/02_decode_message/PA_errors_python.ipynb
@@ -14,7 +14,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 271,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 272,
       "metadata": {
         "id": "D5pSzgxjrrqq",
         "vscode": {
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 273,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -147,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 190,
+      "execution_count": 274,
       "metadata": {
         "id": "l8ZVLLXWrrqs",
         "vscode": {
@@ -185,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 191,
+      "execution_count": 275,
       "metadata": {
         "id": "x9YyIMP6rrqt",
         "vscode": {
@@ -219,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 192,
+      "execution_count": 276,
       "metadata": {
         "id": "K103ZvNVrrqu",
         "vscode": {
@@ -248,7 +248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 193,
+      "execution_count": 277,
       "metadata": {
         "id": "iP7Zj5hPrrqu",
         "vscode": {
@@ -309,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 194,
+      "execution_count": 278,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -324,7 +324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 195,
+      "execution_count": 279,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -339,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 196,
+      "execution_count": 280,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -348,14 +348,13 @@
       "outputs": [],
       "source": [
         "#3\n",
-        "\n",
         "#exponentiates every number using numpy\n",
         "top_secret_3 = np.exp(top_secret_2)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 197,
+      "execution_count": 281,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -364,14 +363,13 @@
       "outputs": [],
       "source": [
         "#4\n",
-        "\n",
         "#squares every number using numpy\n",
         "top_secret_4 = np.square(top_secret_3)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 198,
+      "execution_count": 282,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -379,7 +377,7 @@
       },
       "outputs": [],
       "source": [
-        "#checkpoint\n",
+        "#checkpoint #1\n",
         "#make sure that there are 352 values below 17\n",
         "count_vals = top_secret_4[(top_secret_4 < 17)]\n",
         "\n",
@@ -388,7 +386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 199,
+      "execution_count": 283,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -397,18 +395,18 @@
       "outputs": [],
       "source": [
         "#5\n",
-        "\n",
         "#turns this 1D array into a 2D array with 5 columns\n",
         "\n",
         "#figured 191 by doing length(top_secret) / 5\n",
         "#first argument is #col\n",
         "#second argument is #row\n",
-        "top_secret_5 = top_secret_4.reshape(5, 191)\n"
+        "#add order = 'F' to ensure that the array is converted into a matrix correctly\n",
+        "top_secret_5 = top_secret_4.reshape(5, 191, order = 'F')\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 200,
+      "execution_count": 284,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -427,7 +425,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 201,
+      "execution_count": 285,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -454,7 +452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 202,
+      "execution_count": 286,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -473,7 +471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 203,
+      "execution_count": 287,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -492,7 +490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 204,
+      "execution_count": 288,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -504,74 +502,158 @@
         "#turn matrix back into 1D array\n",
         "\n",
         "#1 column and 5*191 = 955 rows\n",
-        "top_secret_10 = top_secret_9.reshape(1, 955)"
+        "#add order = 'F' to ensure that the array is converted into a matrix correctly\n",
+        "top_secret_10 = top_secret_9.reshape(1, 955, order = 'F')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 205,
+      "execution_count": 289,
       "metadata": {
-        "id": "v_bB8VNvrrqu",
         "vscode": {
           "languageId": "python"
         }
       },
       "outputs": [
         {
-          "ename": "KeyError",
-          "evalue": "\"None of [Index([ 0.39104270677516, 0.386445083484116,  0.37131377305518,\\n       0.338811793814894,  0.37131377305518, 0.396957206698566,\\n       0.354794131173328, 0.375732236794894, 0.369328801833454,\\n       0.374048219522214,\\n       ...\\n       0.372714630100372, 0.333747306126176, 0.343093757143428,\\n       0.360289290710268, 0.312576749124872, 0.338811793814894,\\n       0.258523689428891, 0.277777777777779, 0.303230298107614,\\n       0.368809575916449],\\n      dtype='float64', length=955)] are in the [index]\"",
+          "data": {
+            "text/plain": [
+              "455"
+            ]
+          },
+          "execution_count": null,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "#checkpoint #2\n",
+        "#check to see if all rows 500 and above are < 100?\n",
+        "selected_vals = top_secret_10[:, 500:]\n",
+        "\n",
+        "checkpoint2 = selected_vals[selected_vals <= 100]\n",
+        "\n",
+        "#how to check length of checkpoint 2?\n",
+        "len(checkpoint2)\n",
+        "\n",
+        "#actual length\n",
+        "#955 - 500 = 455"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 295,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [
+        {
+          "ename": "IndexError",
+          "evalue": "arrays used as indices must be of integer (or boolean) type",
           "output_type": "error",
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
-            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)\n",
-            "Cell \u001b[0;32mIn[205], line 1\u001b[0m\n",
-            "\u001b[0;32m----> 1\u001b[0m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mstr\u001b[39m, symbols_df\u001b[38;5;241m.\u001b[39mloc[top_secret][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSymbol\u001b[39m\u001b[38;5;124m'\u001b[39m]))\n",
+            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)\n",
+            "Cell \u001b[0;32mIn[295], line 6\u001b[0m\n",
+            "\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#11\u001b[39;00m\n",
+            "\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m#square root of all numbers in indices 37 to 464\u001b[39;00m\n",
+            "\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#minus 1 b/c first row is 0\u001b[39;00m\n",
+            "\u001b[1;32m      4\u001b[0m top_secret_11 \u001b[38;5;241m=\u001b[39m top_secret_10\n",
+            "\u001b[0;32m----> 6\u001b[0m top_secret_11 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt(top_secret_11[top_secret_10[:, \u001b[38;5;241m36\u001b[39m:\u001b[38;5;241m463\u001b[39m]])\n",
             "\n",
-            "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/indexing.py:1191\u001b[0m, in \u001b[0;36m_LocationIndexer.__getitem__\u001b[0;34m(self, key)\u001b[0m\n",
-            "\u001b[1;32m   1189\u001b[0m maybe_callable \u001b[38;5;241m=\u001b[39m com\u001b[38;5;241m.\u001b[39mapply_if_callable(key, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj)\n",
-            "\u001b[1;32m   1190\u001b[0m maybe_callable \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_deprecated_callable_usage(key, maybe_callable)\n",
-            "\u001b[0;32m-> 1191\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_axis(maybe_callable, axis\u001b[38;5;241m=\u001b[39maxis)\n",
-            "\n",
-            "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/indexing.py:1420\u001b[0m, in \u001b[0;36m_LocIndexer._getitem_axis\u001b[0;34m(self, key, axis)\u001b[0m\n",
-            "\u001b[1;32m   1417\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(key, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mndim\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m key\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n",
-            "\u001b[1;32m   1418\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot index with multidimensional key\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-            "\u001b[0;32m-> 1420\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_iterable(key, axis\u001b[38;5;241m=\u001b[39maxis)\n",
-            "\u001b[1;32m   1422\u001b[0m \u001b[38;5;66;03m# nested tuple slicing\u001b[39;00m\n",
-            "\u001b[1;32m   1423\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_nested_tuple(key, labels):\n",
-            "\n",
-            "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/indexing.py:1360\u001b[0m, in \u001b[0;36m_LocIndexer._getitem_iterable\u001b[0;34m(self, key, axis)\u001b[0m\n",
-            "\u001b[1;32m   1357\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_key(key, axis)\n",
-            "\u001b[1;32m   1359\u001b[0m \u001b[38;5;66;03m# A collection of keys\u001b[39;00m\n",
-            "\u001b[0;32m-> 1360\u001b[0m keyarr, indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_get_listlike_indexer(key, axis)\n",
-            "\u001b[1;32m   1361\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj\u001b[38;5;241m.\u001b[39m_reindex_with_indexers(\n",
-            "\u001b[1;32m   1362\u001b[0m     {axis: [keyarr, indexer]}, copy\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, allow_dups\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m\n",
-            "\u001b[1;32m   1363\u001b[0m )\n",
-            "\n",
-            "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/indexing.py:1558\u001b[0m, in \u001b[0;36m_LocIndexer._get_listlike_indexer\u001b[0;34m(self, key, axis)\u001b[0m\n",
-            "\u001b[1;32m   1555\u001b[0m ax \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj\u001b[38;5;241m.\u001b[39m_get_axis(axis)\n",
-            "\u001b[1;32m   1556\u001b[0m axis_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj\u001b[38;5;241m.\u001b[39m_get_axis_name(axis)\n",
-            "\u001b[0;32m-> 1558\u001b[0m keyarr, indexer \u001b[38;5;241m=\u001b[39m ax\u001b[38;5;241m.\u001b[39m_get_indexer_strict(key, axis_name)\n",
-            "\u001b[1;32m   1560\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m keyarr, indexer\n",
-            "\n",
-            "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/indexes/base.py:6200\u001b[0m, in \u001b[0;36mIndex._get_indexer_strict\u001b[0;34m(self, key, axis_name)\u001b[0m\n",
-            "\u001b[1;32m   6197\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
-            "\u001b[1;32m   6198\u001b[0m     keyarr, indexer, new_indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_reindex_non_unique(keyarr)\n",
-            "\u001b[0;32m-> 6200\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_raise_if_missing(keyarr, indexer, axis_name)\n",
-            "\u001b[1;32m   6202\u001b[0m keyarr \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtake(indexer)\n",
-            "\u001b[1;32m   6203\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(key, Index):\n",
-            "\u001b[1;32m   6204\u001b[0m     \u001b[38;5;66;03m# GH 42790 - Preserve name from an Index\u001b[39;00m\n",
-            "\n",
-            "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/indexes/base.py:6249\u001b[0m, in \u001b[0;36mIndex._raise_if_missing\u001b[0;34m(self, key, indexer, axis_name)\u001b[0m\n",
-            "\u001b[1;32m   6247\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m nmissing:\n",
-            "\u001b[1;32m   6248\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m nmissing \u001b[38;5;241m==\u001b[39m \u001b[38;5;28mlen\u001b[39m(indexer):\n",
-            "\u001b[0;32m-> 6249\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNone of [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mkey\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m] are in the [\u001b[39m\u001b[38;5;132;01m{\u001b[39;00maxis_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m]\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-            "\u001b[1;32m   6251\u001b[0m     not_found \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mlist\u001b[39m(ensure_index(key)[missing_mask\u001b[38;5;241m.\u001b[39mnonzero()[\u001b[38;5;241m0\u001b[39m]]\u001b[38;5;241m.\u001b[39munique())\n",
-            "\u001b[1;32m   6252\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mnot_found\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m not in index\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-            "\n",
-            "\u001b[0;31mKeyError\u001b[0m: \"None of [Index([ 0.39104270677516, 0.386445083484116,  0.37131377305518,\\n       0.338811793814894,  0.37131377305518, 0.396957206698566,\\n       0.354794131173328, 0.375732236794894, 0.369328801833454,\\n       0.374048219522214,\\n       ...\\n       0.372714630100372, 0.333747306126176, 0.343093757143428,\\n       0.360289290710268, 0.312576749124872, 0.338811793814894,\\n       0.258523689428891, 0.277777777777779, 0.303230298107614,\\n       0.368809575916449],\\n      dtype='float64', length=955)] are in the [index]\""
+            "\u001b[0;31mIndexError\u001b[0m: arrays used as indices must be of integer (or boolean) type"
           ]
         }
       ],
+      "source": [
+        "#11\n",
+        "#square root of all numbers in indices 37 to 464\n",
+        "#minus 1 b/c first row is 0\n",
+        "top_secret_11 = top_secret_10\n",
+        "\n",
+        "#need to sqaure root just those specific rows while also keeping the info we need\n",
+        "top_secret_11 = np.sqrt(top_secret_11[top_secret_10[:, 36:463]])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 291,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "#12 \n",
+        "#round all numbers to the nearest whole number\n",
+        "top_secret_12 = np.round(top_secret_11)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 292,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "#13\n",
+        "#shows true/false for every val that is 13 (not useful)\n",
+        "#top_secret_13 = [(top_secret_12 == 13)]\n",
+        "\n",
+        "#converts to np.array even though i think it already is one?\n",
+        "#top_secret_13 = np.array([top_secret_12])\n",
+        "\n",
+        "#changes every val that is 39 in top_secret_12 to be 20\n",
+        "top_secret_12[top_secret_12 == 39] = 20\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 293,
+      "metadata": {
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "198"
+            ]
+          },
+          "execution_count": null,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "#checkpoint #3\n",
+        "#top_secret_12 = top_secret_12 - 1\n",
+        "\n",
+        "\n",
+        "top_secret_even_vals = top_secret_12[top_secret_12 % 2 == 0]\n",
+        "\n",
+        "#if did correclty should equal 344 even vals\n",
+        "len(top_secret_even_vals)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 294,
+      "metadata": {
+        "id": "v_bB8VNvrrqu",
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
       "source": [
         "#''.join(map(str, symbols_df.loc[top_secret]['Symbol']))"
       ]
