--- a/practice activities/02_decode_message/PA_errors_python.ipynb
+++ b/practice activities/02_decode_message/PA_errors_python.ipynb
@@ -14,7 +14,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 271,
+      "execution_count": 401,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 272,
+      "execution_count": 402,
       "metadata": {
         "id": "D5pSzgxjrrqq",
         "vscode": {
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 273,
+      "execution_count": 403,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -147,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 274,
+      "execution_count": 404,
       "metadata": {
         "id": "l8ZVLLXWrrqs",
         "vscode": {
@@ -185,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 275,
+      "execution_count": 405,
       "metadata": {
         "id": "x9YyIMP6rrqt",
         "vscode": {
@@ -219,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 276,
+      "execution_count": 406,
       "metadata": {
         "id": "K103ZvNVrrqu",
         "vscode": {
@@ -248,7 +248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 277,
+      "execution_count": 407,
       "metadata": {
         "id": "iP7Zj5hPrrqu",
         "vscode": {
@@ -309,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 278,
+      "execution_count": 408,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -324,7 +324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 279,
+      "execution_count": 409,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -339,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 280,
+      "execution_count": 410,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -354,7 +354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 281,
+      "execution_count": 411,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -369,7 +369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 282,
+      "execution_count": 412,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -386,7 +386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 283,
+      "execution_count": 413,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -406,7 +406,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 284,
+      "execution_count": 414,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -425,7 +425,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 285,
+      "execution_count": 415,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -452,7 +452,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 286,
+      "execution_count": 416,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -471,7 +471,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 287,
+      "execution_count": 417,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -490,7 +490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 288,
+      "execution_count": 418,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -508,7 +508,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 289,
+      "execution_count": 419,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -542,7 +542,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 295,
+      "execution_count": 420,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -550,20 +550,10 @@
       },
       "outputs": [
         {
-          "ename": "IndexError",
-          "evalue": "arrays used as indices must be of integer (or boolean) type",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
-            "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)\n",
-            "Cell \u001b[0;32mIn[295], line 6\u001b[0m\n",
-            "\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#11\u001b[39;00m\n",
-            "\u001b[1;32m      2\u001b[0m \u001b[38;5;66;03m#square root of all numbers in indices 37 to 464\u001b[39;00m\n",
-            "\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m#minus 1 b/c first row is 0\u001b[39;00m\n",
-            "\u001b[1;32m      4\u001b[0m top_secret_11 \u001b[38;5;241m=\u001b[39m top_secret_10\n",
-            "\u001b[0;32m----> 6\u001b[0m top_secret_11 \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msqrt(top_secret_11[top_secret_10[:, \u001b[38;5;241m36\u001b[39m:\u001b[38;5;241m463\u001b[39m]])\n",
-            "\n",
-            "\u001b[0;31mIndexError\u001b[0m: arrays used as indices must be of integer (or boolean) type"
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "<positron-console-cell-420>:9: RuntimeWarning: invalid value encountered in sqrt\n"
           ]
         }
       ],
@@ -574,12 +564,14 @@
         "top_secret_11 = top_secret_10\n",
         "\n",
         "#need to sqaure root just those specific rows while also keeping the info we need\n",
-        "top_secret_11 = np.sqrt(top_secret_11[top_secret_10[:, 36:463]])"
+        "#np.sqrt(top_secret_11[top_secret_11[:, 36:463]])\n",
+        "\n",
+        "top_secret_11[:, 36:463] = np.sqrt(top_secret_11[:, 36:463])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 291,
+      "execution_count": 421,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -594,7 +586,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 292,
+      "execution_count": 422,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -615,7 +607,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 293,
+      "execution_count": 423,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -625,7 +617,7 @@
         {
           "data": {
             "text/plain": [
-              "198"
+              "394"
             ]
           },
           "execution_count": null,
@@ -641,21 +633,51 @@
         "top_secret_even_vals = top_secret_12[top_secret_12 % 2 == 0]\n",
         "\n",
         "#if did correclty should equal 344 even vals\n",
-        "len(top_secret_even_vals)"
+        "len(top_secret_even_vals)\n",
+        "\n",
+        "#currently im getting 394 instead of 355"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 294,
+      "execution_count": 424,
       "metadata": {
         "id": "v_bB8VNvrrqu",
         "vscode": {
           "languageId": "python"
         }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ValueError",
+          "evalue": "Cannot index with multidimensional key",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)\n",
+            "Cell \u001b[0;32mIn[424], line 1\u001b[0m\n",
+            "\u001b[0;32m----> 1\u001b[0m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mstr\u001b[39m, symbols_df\u001b[38;5;241m.\u001b[39mloc[top_secret_12][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSymbol\u001b[39m\u001b[38;5;124m'\u001b[39m]))\n",
+            "\n",
+            "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/indexing.py:1191\u001b[0m, in \u001b[0;36m_LocationIndexer.__getitem__\u001b[0;34m(self, key)\u001b[0m\n",
+            "\u001b[1;32m   1189\u001b[0m maybe_callable \u001b[38;5;241m=\u001b[39m com\u001b[38;5;241m.\u001b[39mapply_if_callable(key, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj)\n",
+            "\u001b[1;32m   1190\u001b[0m maybe_callable \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_deprecated_callable_usage(key, maybe_callable)\n",
+            "\u001b[0;32m-> 1191\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_axis(maybe_callable, axis\u001b[38;5;241m=\u001b[39maxis)\n",
+            "\n",
+            "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/indexing.py:1418\u001b[0m, in \u001b[0;36m_LocIndexer._getitem_axis\u001b[0;34m(self, key, axis)\u001b[0m\n",
+            "\u001b[1;32m   1416\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28misinstance\u001b[39m(key, \u001b[38;5;28mtuple\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(labels, MultiIndex)):\n",
+            "\u001b[1;32m   1417\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(key, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mndim\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m key\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n",
+            "\u001b[0;32m-> 1418\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot index with multidimensional key\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+            "\u001b[1;32m   1420\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_iterable(key, axis\u001b[38;5;241m=\u001b[39maxis)\n",
+            "\u001b[1;32m   1422\u001b[0m \u001b[38;5;66;03m# nested tuple slicing\u001b[39;00m\n",
+            "\n",
+            "\u001b[0;31mValueError\u001b[0m: Cannot index with multidimensional key"
+          ]
+        }
+      ],
       "source": [
-        "#''.join(map(str, symbols_df.loc[top_secret]['Symbol']))"
+        "\n",
+        "\n",
+        "''.join(map(str, symbols_df.loc[top_secret_12]['Symbol']))"
       ]
     }
   ],
