finalized version. (still couldnt get the right answer)

--- a/practice activities/02_decode_message/PA_errors_python.ipynb
+++ b/practice activities/02_decode_message/PA_errors_python.ipynb
@@ -14,7 +14,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 93,
+      "execution_count": 1,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -64,7 +64,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 94,
+      "execution_count": 2,
       "metadata": {
         "id": "D5pSzgxjrrqq",
         "vscode": {
@@ -114,7 +114,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 95,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -147,7 +147,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 4,
       "metadata": {
         "id": "l8ZVLLXWrrqs",
         "vscode": {
@@ -185,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 97,
+      "execution_count": 5,
       "metadata": {
         "id": "x9YyIMP6rrqt",
         "vscode": {
@@ -219,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 98,
+      "execution_count": 6,
       "metadata": {
         "id": "K103ZvNVrrqu",
         "vscode": {
@@ -248,7 +248,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 99,
+      "execution_count": 7,
       "metadata": {
         "id": "iP7Zj5hPrrqu",
         "vscode": {
@@ -309,7 +309,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 100,
+      "execution_count": 8,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -324,7 +324,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 101,
+      "execution_count": 9,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -339,7 +339,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 102,
+      "execution_count": 10,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -354,7 +354,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 103,
+      "execution_count": 11,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -369,7 +369,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 104,
+      "execution_count": 12,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -386,7 +386,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 105,
+      "execution_count": 13,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -406,7 +406,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 106,
+      "execution_count": 14,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -425,7 +425,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 107,
+      "execution_count": 15,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -445,14 +445,14 @@
         "\n",
         "#b/c they are the same length\n",
         "#we can subtract top_secret by even_vals\\\n",
-        "top_secret_7[0] = top_secret_5[0] - even_vals\n",
+        "top_secret_7[0] = top_secret_7[0] - even_vals\n",
         "\n",
         "#why does this keep changing top_secret_7 if i keep running it?\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 108,
+      "execution_count": 16,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -466,12 +466,12 @@
         "#store top_secret_8 so that nothing changes if we run this multiple times it doesn't keep chaning the vals\n",
         "top_secret_8 = top_secret_7\n",
         "\n",
-        "top_secret_8[17:23, 3] = top_secret_7[17:23, 3] - 100\n"
+        "top_secret_8[17:23, 2] = top_secret_8[17:23, 2] - 100\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 109,
+      "execution_count": 17,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -490,7 +490,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 110,
+      "execution_count": 18,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -503,12 +503,18 @@
         "\n",
         "#1 column and 5*191 = 955 rows\n",
         "#add order = 'F' to ensure that the array is converted into a matrix correctly\n",
-        "top_secret_10 = top_secret_9.reshape(1, 955, order = 'F')"
+        "\n",
+        "#this is a matrix with 1 column\n",
+        "#top_secret_10 = top_secret_9.reshape(1, 955, order = 'F')\n",
+        "\n",
+        "#or\n",
+        "#converts to actual list\n",
+        "top_secret_10 = top_secret_9.flatten(order='F')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 22,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -529,7 +535,7 @@
       "source": [
         "#checkpoint #2\n",
         "#check to see if all rows 500 and above are < 100?\n",
-        "selected_vals = top_secret_10[:, 500:]\n",
+        "selected_vals = top_secret_10[500:]\n",
         "\n",
         "checkpoint2 = selected_vals[selected_vals <= 100]\n",
         "\n",
@@ -542,7 +548,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 23,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -553,7 +559,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "<positron-console-cell-112>:9: RuntimeWarning: invalid value encountered in sqrt\n"
+            "<positron-console-cell-23>:9: RuntimeWarning: invalid value encountered in sqrt\n"
           ]
         }
       ],
@@ -566,12 +572,12 @@
         "#need to sqaure root just those specific rows while also keeping the info we need\n",
         "#np.sqrt(top_secret_11[top_secret_11[:, 36:463]])\n",
         "\n",
-        "top_secret_11[:, 36:463] = np.sqrt(top_secret_11[:, 36:463])"
+        "top_secret_11[36:463] = np.sqrt(top_secret_11[36:463])"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 113,
+      "execution_count": 24,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -586,7 +592,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 114,
+      "execution_count": 25,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -607,7 +613,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 115,
+      "execution_count": 26,
       "metadata": {
         "vscode": {
           "languageId": "python"
@@ -640,40 +646,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 116,
+      "execution_count": null,
       "metadata": {
         "id": "v_bB8VNvrrqu",
         "vscode": {
           "languageId": "python"
         }
       },
-      "outputs": [
-        {
-          "ename": "ValueError",
-          "evalue": "Cannot index with multidimensional key",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)\n",
-            "Cell \u001b[0;32mIn[116], line 1\u001b[0m\n",
-            "\u001b[0;32m----> 1\u001b[0m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;28mmap\u001b[39m(\u001b[38;5;28mstr\u001b[39m, symbols_df\u001b[38;5;241m.\u001b[39mloc[top_secret_12][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSymbol\u001b[39m\u001b[38;5;124m'\u001b[39m]))\n",
-            "\n",
-            "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/indexing.py:1191\u001b[0m, in \u001b[0;36m_LocationIndexer.__getitem__\u001b[0;34m(self, key)\u001b[0m\n",
-            "\u001b[1;32m   1189\u001b[0m maybe_callable \u001b[38;5;241m=\u001b[39m com\u001b[38;5;241m.\u001b[39mapply_if_callable(key, \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobj)\n",
-            "\u001b[1;32m   1190\u001b[0m maybe_callable \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_deprecated_callable_usage(key, maybe_callable)\n",
-            "\u001b[0;32m-> 1191\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_axis(maybe_callable, axis\u001b[38;5;241m=\u001b[39maxis)\n",
-            "\n",
-            "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/indexing.py:1418\u001b[0m, in \u001b[0;36m_LocIndexer._getitem_axis\u001b[0;34m(self, key, axis)\u001b[0m\n",
-            "\u001b[1;32m   1416\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28misinstance\u001b[39m(key, \u001b[38;5;28mtuple\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(labels, MultiIndex)):\n",
-            "\u001b[1;32m   1417\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(key, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mndim\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m key\u001b[38;5;241m.\u001b[39mndim \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n",
-            "\u001b[0;32m-> 1418\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot index with multidimensional key\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-            "\u001b[1;32m   1420\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_iterable(key, axis\u001b[38;5;241m=\u001b[39maxis)\n",
-            "\u001b[1;32m   1422\u001b[0m \u001b[38;5;66;03m# nested tuple slicing\u001b[39;00m\n",
-            "\n",
-            "\u001b[0;31mValueError\u001b[0m: Cannot index with multidimensional key"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "\n",
         "\n",
