added YAML functions and rendered practice activity 1.1

--- a/practice activities/01 intro to jupyter notebooks/Day01_Intro_to_Jupyter_Notebooks.ipynb
+++ b/practice activities/01 intro to jupyter notebooks/Day01_Intro_to_Jupyter_Notebooks.ipynb
@@ -1,13 +1,24 @@
 {
   "cells": [
     {
-      "cell_type": "raw",
-      "id": "7c0dd8d6",
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "9ed6f514",
       "metadata": {
-        "id": "7c0dd8d6"
+        "vscode": {
+          "languageId": "yaml"
+        }
       },
+      "outputs": [],
       "source": [
-        "<h1> Introduction hi to Jupyter Notebooks </h1>"
+        "---\n",
+        "title: Intro to Jupyter\n",
+        "author: Ben Laufer\n",
+        "format:\n",
+        "    html:\n",
+        "        toc: true\n",
+        "        code-fold: true\n",
+        "---"
       ]
     },
     {
