finished practice activity 2.2 and started setting up lab2

--- a/practice_activities/2.1_data_wrangling_titanic/Titanic_Wrangling.ipynb
+++ b/practice_activities/2.1_data_wrangling_titanic/Titanic_Wrangling.ipynb
@@ -59,6 +59,32 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "#check unique vals of column\n",
+        "#df_titanic[\"class\"].unique()\n",
+        "\n",
+        "#for practice of the actual question use this code: but it won't work bc its the wrong dataset\n",
+        "\n",
+        "#df_titanic[\"type\"] = df_titanic[\"class\"].map({\n",
+        "    #\"1st\": \"passenger,\n",
+        "    #\"2nd\": \"passenger,\n",
+        "    #\"3rd\": \"passenger,\n",
+        "    #....\n",
+        "    #....\n",
+        "    #....\n",
+        "    #\"})\n",
+        "\n",
+        "#where_pass = df_titanic[\"type\"] == \"passenger\"\n",
+        "#df_pass = df_titanic[where_pass]\n",
+        "\n",
+        "#df_pass would be our data that includes passengers only"
+      ]
+    },
+    {
+      "cell_type": "code",
       "execution_count": 16,
       "metadata": {
         "id": "TBthOzDLgBif"
@@ -173,7 +199,15 @@
         "\n",
         "\n",
         "#the conditional distribution of where they embarked given their class\n",
-        "given_class = pd.crosstab(class_and_embarked['Embarked'], class_and_embarked['Pclass'], normalize='columns')\n"
+        "given_class = pd.crosstab(class_and_embarked['Embarked'], class_and_embarked['Pclass'], normalize='columns')\n",
+        "\n",
+        "#or (when using the other dataset)\n",
+        "#df_third = df_pass[df_pass[\"class\"] == \"3rd\"]\n",
+        "#df_third[\"embarked\"].value_counts(normalize = True)\n",
+        "\n",
+        "#joint ec\n",
+        "#marginal_class = joint_ec.sum(axis = 0)\n",
+        "#joint_ec.divide(marginal_class)"
       ]
     },
     {
