--- a/practice_activities/2.2_data_wrangling_college/PA_wrangle.ipynb
+++ b/practice_activities/2.2_data_wrangling_college/PA_wrangle.ipynb
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": 3,
       "metadata": {
         "id": "9asR0S4_eiRA"
       },
@@ -100,7 +100,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 4,
       "metadata": {
         "id": "1QZE0D5TeiRC"
       },
@@ -123,7 +123,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 5,
       "metadata": {
         "id": "E7Xx6YsKeiRC"
       },
@@ -148,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": 6,
       "metadata": {
         "id": "cIOpSHCjeiRC"
       },
@@ -186,7 +186,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": 7,
       "metadata": {
         "id": "TFBmCHMLeiRD"
       },
@@ -210,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": 8,
       "metadata": {
         "id": "i3gRwBgbeiRD"
       },
@@ -235,7 +235,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": 9,
       "metadata": {
         "id": "520ghDYBeiRD"
       },
@@ -276,9 +276,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 30,
       "metadata": {},
       "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "<positron-console-cell-30>:22: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n"
+          ]
+        },
         {
           "data": {
             "text/html": [
@@ -317,47 +328,28 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>1519</th>\n",
-              "      <td>Boston University</td>\n",
-              "      <td>Boston</td>\n",
+              "      <th>1619</th>\n",
+              "      <td>Williams College</td>\n",
+              "      <td>Williamstown</td>\n",
               "      <td>MA</td>\n",
-              "      <td>2215</td>\n",
+              "      <td>1267</td>\n",
               "      <td>2</td>\n",
-              "      <td>0.2511</td>\n",
-              "      <td>1401.0</td>\n",
-              "      <td>52082.0</td>\n",
-              "      <td>52082.0</td>\n",
-              "      <td>16716.0</td>\n",
+              "      <td>0.1458</td>\n",
+              "      <td>1493.0</td>\n",
+              "      <td>53550.0</td>\n",
+              "      <td>53550.0</td>\n",
+              "      <td>2033.0</td>\n",
               "      <td>1</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>7308.6531</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>1549</th>\n",
-              "      <td>Harvard University</td>\n",
-              "      <td>Cambridge</td>\n",
-              "      <td>MA</td>\n",
-              "      <td>2138</td>\n",
-              "      <td>2</td>\n",
-              "      <td>0.0516</td>\n",
-              "      <td>1523.0</td>\n",
-              "      <td>48949.0</td>\n",
-              "      <td>48949.0</td>\n",
-              "      <td>7532.0</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0.0</td>\n",
-              "      <td>3668.8372</td>\n",
+              "      <td>3485.939643</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "                  INSTNM       CITY STABBR   ZIP CONTROL  ...  TUITIONFEE_OUT     UGDS  REGION  TUITION_DIFF    APPLIED\n",
-              "1519   Boston University     Boston     MA  2215       2  ...         52082.0  16716.0       1           0.0  7308.6531\n",
-              "1549  Harvard University  Cambridge     MA  2138       2  ...         48949.0   7532.0       1           0.0  3668.8372\n",
-              "\n",
-              "[2 rows x 13 columns]"
+              "                INSTNM          CITY STABBR   ZIP CONTROL  ADM_RATE  SAT_AVG  TUITIONFEE_IN  TUITIONFEE_OUT    UGDS REGION  TUITION_DIFF      APPLIED\n",
+              "1619  Williams College  Williamstown     MA  1267       2    0.1458   1493.0        53550.0         53550.0  2033.0      1           0.0  3485.939643"
             ]
           },
           "execution_count": null,
@@ -381,20 +373,26 @@
         "clue4 = clue3[(clue3[\"SAT_AVG\"] % 2 != 0)]\n",
         "\n",
         "#clue 5\n",
-        "clue5 = clue4[(clue4['CITY'] != \"New Hampshire\") | (clue4['STABBR'] != \"NH\")]\n",
+        "clue5 = clue4[(clue4['CITY'] != \"Boston\") & (clue4['STABBR'] != \"NH\")]\n",
         "\n",
         "#clue 6\n",
         "#create applied variable\n",
         "#first part is accepted freshmen \n",
         "#and then multiply that by total applied which would be 1 + 1-acceptance\n",
-        "clue5['APPLIED'] = .25 * clue5['UGDS'] * (1 + (1-clue5['ADM_RATE']))\n",
+        "clue5['APPLIED'] = .25 * clue5['UGDS'] / clue5['ADM_RATE']\n",
         "#select the two that are over 3000\n",
         "clue6 = clue5[(clue5[\"APPLIED\"] > 3000)]\n",
         "\n",
         "#clue7\n",
-        "clue6.head()\n",
         "#not the ivy league (Harvard)\n",
+        "clue7 = clue6[(clue6[\"INSTNM\"] != \"Harvard University\")]\n",
         "\n",
+        "#clue8\n",
+        "clue7.head()\n",
+        "#or\n",
+        "#finds lowest tuiton\n",
+        "clue7[\"TUITIONFEE_OUT\"].min()\n",
+        "clue7[clue7[\"TUITIONFEE_OUT\"] == 53550.0]\n",
         "#So Ephilia is going to Boston University!"
       ]
     }
